	  task ID in the child task's TCB.  Instead, keep the parent
	  task group IN the child task's task group.
	* fs/, sched/, include/nuttx/sched.h, and include/nutts/fs/fs.h:
	  Move file data from the TCB to the task group structure.
	* libc/stdio/, sched/, include/nuttx/lib.h, and include/nutts/fs/fs.h:
	  Move stream data from the TCB to the task group structure.
	* net/, sched/, and include/nuttx/net/net.h:  Move socket data
	  from the TCB to the task group structure.
	* sched/task_starthook.c, sched/task_start.c, and include/nuttx/sched.h:
	  Add a task start hook that will be called before the task main
	  is started. This can be used to schedule C++ constructors to run
	  automatically in the context of the new task.
	* binfmt/binfmt_execmodule: Execute constructors as a start hook.
	* sched/os_start.c: Fix ordering of group initialization.
	* configs/stm32f4discovery/usbnsh:  Add an NSH STM32F4Discovery
	  configuration that uses USB CDC/ACM for the NSH console.
	* configs/stm32f4discovery/nsh: Converted to use the kconfig-frontends
	  tools.
	* configs/*/src/up_userleds.c: Fix a error that was cloned into
	  all STM32 user LED code.  The wrong defintions were being used
	  to set LEDs on or off.
	* arch/*/common/up_internal.h and arch/*/common/up_initialize.c:
	  Serial was driver was not being built if there is no console
	  device.  Obviously, the serial driver may be needed even in
	  this case.
	* arch/arm/src/stm32/stm32_serial.c: If there is a serial console,
	  it would be ttyS0 and the others would be ttyS1-5.  If there
	  is not serial console, was labeling them ttyS1-6; now labels them
	  ttyS0-5.
	* fs/fs_syslog.c: Can't handle SYSLOG output to character device from
	  the IDLE task (because it can't block). syslog_putc now returns EOF
	  on failure and sets errno.  Fixed some errors in error handling.
	* libc/stdio/lib_syslogstream.c:  Checking of return value from
	  syslog_putc was bogus.  Switching to EOF for all errors solves
	  this.